# Dobble

./: .clang-format  API-CR_Dobble-Alexis_ROLLIN-Antoine_SAGET.md  CMakeCache.txt  CMakeLists.txt  CMakeListsold.txt  CPackConfig.cmake  CPackSourceConfig.cmake  Makefile  README.md  cmake_install.cmake  license.txt
data/: pgTest.txt
data/IconesTresTresQuali/: Thumbs.db
header/: Vect2.h  automate.h  carte.h  fichierVersPlateau.h  graphics.h  icone.h  plateau.h
src/: Vect2.c  automate.c  carte.c  dobble.c  fichierVersPlateau.c  graphics.c  icone.c  plateau.c
tests/: testCarteAleat.c  testClic.c  testFichierVersPlateau.c  testMain.c  testOptimisationsAleatoire.c  testRandomCard.c  testRandomLocation.c  testRandomLocationGraphic.c
